--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "eslint-plugin-react": "^7.7.0"
   },
   "dependencies": {
-    "lodash": "^4.17.5",
-    "strapi": "3.0.0-alpha.16",
+    "lodash": "^4.17.11",
+    "strapi": "^3.0.0-alpha.17",
     "strapi-hook-mongoose": "3.0.0-alpha.16"
   },
   "author": {
